[fix] scriptElement__interactive wrap

--- a/src/components/ScriptsPanel/components/ScriptElement/ScriptElement.module.css
+++ b/src/components/ScriptsPanel/components/ScriptElement/ScriptElement.module.css
@@ -88,7 +88,6 @@
   display: flex;
   gap: 0.5rem;
   width: 100%;
-  flex-wrap: wrap;
 }
 
 .scriptElement__editIcon,
